--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>Webpack Starter Kit</title>
+    <title>feud</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="styles1.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Webpack Starter Kit</h1>
-
-    <img src="./images/turing-logo.png" alt="turing logo" height="100px" width="100px">
-
-    <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
+    <div id="splash-page">
+      <img src="images/feud_title.png" alt="feud main title" width="800px">
+      <img src="images/feud_subtitle.png" alt="front end vs back end subtitle" width="500px">
+      <div id="vs-inputs">
+        <input type="text" value="FRONTEND PLAYER NAME" id="player1-input">
+        <p>vs</p>
+        <input type="text" value="BACKEND PLAYER NAME" id="player2-input">
+      </div>
+      <button type="button">START GAME</button>
+    </div>
   </body>
+  <div id="game-page">
+    <header>
+      <img src="images/feud_title.png" alt="feud main title" width="200px">
+    </header>
+    <div id="game-header">
+      <h2>ROUND:</h2>
+      <h3>SURVEY QUESTION</h3>
+    </div>
+    <div id="timer-header">
+      <h2>TIME</h2>
+      <h3>30 SEC</h3>
+    </div>
+  </div>
 </html>
+
+  <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
