Add more html structure and css styling

--- a/src/index.html
+++ b/src/index.html
@@ -23,21 +23,21 @@
     <header>
       <img src="images/feud_title.png" alt="feud main title" height="75px" width="175px">
       <div id="game-header">
-        <h2>ROUND: 1</h2>
+        <h3>ROUND: 1</h3>
         <h3>SURVEY QUESTION</h3>
       </div>
       <div id="timer-header">
-        <h2>TIME</h2>
+        <h3>TIME:</h3>
         <h3>30 SEC</h3>
       </div>
     </header>
     <h1>IF YOU DREW HOMER SIMPSON’S NAME IN A SECRET SANTA EXCHANGE, WHAT WOULD YOU BUY HIM?</h1>
     <div id="player-guess-info">
       <aside id="aside-player1">
-        <h5>FE PLAYER</h5>
-        <h4>250</h4>
-        <h6>PTS</h6>
-        <img src="" alt="carrot icon" height="" width="">
+        <h5 id="h5-fe">FE PLAYER</h5>
+        <h4 id="h4-fe">250</h4>
+        <h5 id="h5-fe">PTS</h5>
+        <h4 id="h4-fe">^</h4>
       </aside>
       <main id="main-survey-guess">
         <section id="survey1">
@@ -56,11 +56,12 @@
         <button type="button">SUBMIT GUESS</button>
       </main>
       <aside id="aside-player1">
-        <h5>FE PLAYER</h5>
-        <h4>250</h4>
-        <h6>PTS</h6>
-        <img src="" alt="carrot icon" height="" width="">
+        <h5 id="h5-be">BE PLAYER</h5>
+        <h4 id="h4-be">250</h4>
+        <h5 id="h5-be">PTS</h5>
+        <h4 id="h4-be">^</h4>
         <h7>END GAME</h7>
+        <h7>NEW GAME</h7>
       </aside>
     </div>
 
