--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
   <head>
     <title>feud</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="styles1.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap" rel="stylesheet">
   </head>
@@ -12,11 +11,11 @@
       <img src="images/feud_title.png" alt="feud main title" id="splash-page-img-feud">
       <img src="images/feud_subtitle.png" alt="front end vs back end subtitle" id="splash-page-img-fevsbe">
       <div id="vs-inputs">
-        <input type="text" value="ENTER FRONTEND PLAYER NAME" id="player1-input">
+        <input id="player1-input" class="name-inputs" type="text" placeholder="ENTER FRONTEND PLAYER NAME">
         <img src="images/feud_vs.png" alt="vs" id="splash-page-img-vs">
-        <input type="text" value="ENTER BACKEND PLAYER NAME" id="player2-input">
+        <input id="player2-input" class="name-inputs" type="text" placeholder="ENTER BACKEND PLAYER NAME">
       </div>
-      <button type="button">START GAME</button>
+      <button id="start-game" type="button">START GAME</button>
     </div>
   </body>
   <div id="game-page">
