Add minor styling changes to button

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
       <img src="images/feud_title.png" alt="feud main title" id="splash-page-img-feud">
       <img src="images/feud_subtitle.png" alt="front end vs back end subtitle" id="splash-page-img-fevsbe">
       <div id="vs-inputs">
-        <input id="player1-input" class="name-inputs" type="text" placeholder="ENTER FRONTEND PLAYER NAME">
+        <input id="player1-input" class="name-inputs" type="text" maxlength="10" placeholder="ENTER FRONTEND PLAYER NAME">
         <img src="images/feud_vs.png" alt="vs" id="splash-page-img-vs">
-        <input id="player2-input" class="name-inputs" type="text" placeholder="ENTER BACKEND PLAYER NAME">
+        <input id="player2-input" class="name-inputs" type="text" maxlength="10" placeholder="ENTER BACKEND PLAYER NAME">
       </div>
       <button id="start-game" type="button">START GAME</button>
     </div>
@@ -50,7 +50,7 @@
           <h2 id="survey-num">3</h2>
           <h2 id="survey-score">230</h2>
         </section>
-        <input type="text" value="ENTER GUESS HERE" id="guess-input">
+        <input type="text" placeholder="ENTER GUESS HERE" id="guess-input">
         <button type="button">SUBMIT GUESS</button>
       </main>
       <aside id="aside-player1">
