Update the dom to interact with jquery methods

--- a/src/index.html
+++ b/src/index.html
@@ -26,39 +26,39 @@
         <h3>SURVEY QUESTION</h3>
       </div>
       <div id="timer-header">
-        <h3>TIME: 30 SEC</h3>
+        <h3 id="timer">TIME: 30 SEC</h3>
       </div>
     </header>
     <h1 id="survey-question">IF YOU DREW HOMER SIMPSON’S NAME IN A SECRET SANTA EXCHANGE, WHAT WOULD YOU BUY HIM?</h1>
     <div id="player-guess-info">
       <aside id="aside-player1">
         <h5 id="player1-name" class="h5-fe">fe player</h5>
-        <h4 id="player1-score" class="h4-fe">250</h4>
+        <h4 id="player1-score" class="h4-fe">0</h4>
         <h5 class="h5-fe">PTS</h5>
         <h4 id="player1-carrot" class="h4-fe">^</h4>
       </aside>
       <main id="main-survey-guess">
         <section id="survey1">
           <h2 id="answer1" class="survey-num">1</h2>
-          <h2 id="score1"class="survey-score">0</h2>
+          <h2 id="score1"class="survey-score">#</h2>
         </section>
         <section id="survey2">
           <h2 id="answer2" class="survey-num">2</h2>
-          <h2 id="score2" class="survey-score">75</h2>
+          <h2 id="score2" class="survey-score">#</h2>
         </section>
         <section id="survey3">
           <h2 id="answer3" class="survey-num">3</h2>
-          <h2 id="score3" class="survey-score">230</h2>
+          <h2 id="score3" class="survey-score">#</h2>
         </section>
         <input id="guess-input" type="text" placeholder="ENTER GUESS HERE">
         <button id="submit-guess" type="button">SUBMIT GUESS</button>
+        <button id="end-game" type="button">END GAME</button>
       </main>
       <aside id="aside-player2">
         <h5 id="player2-name" class="h5-be">be player</h5>
-        <h4 id="player2-score" class="h4-be">250</h4>
+        <h4 id="player2-score" class="h4-be">0</h4>
         <h5 class="h5-be">PTS</h5>
         <h4 id="player2-carrot" class="h4-be">^</h4>
-        <a href="google.com">END GAME</a>
       </aside>
     </div>
   </div>
