Add focus animation to carrots

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
         <h5 id="player1-name" class="h5-fe">fe player</h5>
         <h4 id="player1-score" class="h4-fe">0</h4>
         <h5 class="h5-fe">PTS</h5>
-        <h4 id="player1-carrot" class="h4-fe">^</h4>
+        <h4 id="player1-carrot" class="h4-fe carrot">^</h4>
       </aside>
       <main id="main-survey-guess">
         <section id="survey1">
@@ -58,7 +58,7 @@
         <h5 id="player2-name" class="h5-be">be player</h5>
         <h4 id="player2-score" class="h4-be">0</h4>
         <h5 class="h5-be">PTS</h5>
-        <h4 id="player2-carrot" class="h4-be">^</h4>
+        <h4 id="player2-carrot" class="h4-be carrot">^</h4>
       </aside>
     </div>
   </div>
