Add list items to first modal

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <img src="images/feud_vs.png" alt="vs" id="splash-page-img-vs">
         <input id="player2-input" class="name-inputs" type="text" placeholder="ENTER BACKEND PLAYER NAME">
       </div>
-      <button id="start-game" type="button">START GAME</button>
+      <button id="start-game" type="button">git init</button>
     </div>
   </body>
   <div id="game-page">
@@ -51,7 +51,7 @@
           <h2 id="score3" class="survey-score">#</h2>
         </section>
         <input id="guess-input" type="text" placeholder="ENTER GUESS HERE">
-        <button id="submit-guess" type="button">SUBMIT GUESS</button>
+        <button id="submit-guess" type="button">git commit</button>
         <button id="end-game" type="button">END GAME</button>
       </main>
       <aside id="aside-player2" class="innactive">
