Add footer with help and end game clickables

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,6 @@
         </section>
         <input id="guess-input" type="text" placeholder="ENTER GUESS HERE">
         <button id="submit-guess" type="button">git commit</button>
-        <button id="end-game" type="button">END GAME</button>
       </main>
       <aside id="aside-player2" class="innactive">
         <h5 id="player2-name" class="h5-be">be player</h5>
@@ -61,5 +60,9 @@
         <h4 id="player2-carrot" class="h4-be carrot">^</h4>
       </aside>
     </div>
+    <footer>
+      <p class="help" title="Need to see how to play the game? click here">git help</p>
+      <p class="endgame" title="start over from scratch">rm rf</p>
+    </footer>
   </div>
 </html>
