--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
-<!DOCTYPE html>
+P<!DOCTYPE html>
 <html lang="en-US">
   <head>
     <title>feud</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="images/feud_icon">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap" rel="stylesheet">
   </head>
