Add return to game functionality to end game modal

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@ P<!DOCTYPE html>
       </aside>
     </div>
     <footer>
-      <p class="help" title="Need to see how to play the game? click here">git help</p>
+      <p class="help" title="Need to see how to play the game?">git help</p>
       <p class="endgame" title="start over from scratch">rm rf</p>
     </footer>
   </div>
