Remove autofill from input

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
           <h2 id="answer3" class="survey-num">3</h2>
           <h2 id="score3" class="survey-score">#</h2>
         </section>
-        <input id="guess-input" type="text" placeholder="ENTER GUESS HERE">
+        <input autocomplete="off" id="guess-input" type="text" placeholder="ENTER GUESS HERE">
         <button id="submit-guess" type="button">git commit</button>
       </main>
       <aside id="aside-player2" class="innactive">
