Update format and styling tweaks to design to increase ux experience after ux testing

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
       <img id="splash-page-img-feud" src="images/feud_title.png" alt="feud main title">
       <img id="splash-page-img-fevsbe" src="images/feud_subtitle.png" alt="front end vs back end subtitle">
       <div id="vs-inputs">
-        <input id="player1-input" class="name-inputs" type="text" placeholder="ENTER FRONTEND PLAYER NAME">
+        <input id="player1-input" class="name-inputs" type="text" placeholder="ENTER FE PLAYER NAME">
         <img src="images/feud_vs.png" alt="vs" id="splash-page-img-vs">
-        <input id="player2-input" class="name-inputs" type="text" placeholder="ENTER BACKEND PLAYER NAME">
+        <input id="player2-input" class="name-inputs" type="text" placeholder="ENTER BE PLAYER NAME">
       </div>
       <button id="start-game" type="button">git init</button>
     </div>
@@ -50,7 +50,6 @@
           <h2 id="score3" class="survey-score">#</h2>
         </section>
         <input autocomplete="off" id="guess-input" type="text" placeholder="ENTER GUESS HERE">
-        <button id="submit-guess" type="button">git commit</button>
       </main>
       <aside id="aside-player2" class="innactive">
         <h5 id="player2-name" class="h5-be">be player</h5>
@@ -61,6 +60,7 @@
     </div>
     <footer>
       <p class="help" title="Need to see how to play the game?">git help</p>
+      <button id="submit-guess" type="button">git commit</button>
       <p class="endgame" title="start over from scratch">rm rf</p>
     </footer>
   </div>
