Add answers to final modal

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
     <footer>
       <p class="help" title="Need to see how to play the game?">git help</p>
       <button id="submit-guess" type="button">git commit</button>
-      <p class="endgame" title="start over from scratch">rm rf</p>
+      <p class="endgame" title="start over from scratch">rm -rf</p>
     </footer>
   </div>
 </html>
