Edit timer styling and small tweaks

--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
   <div id="game-page">
     <header>
       <img id="header-img-feud" src="images/feud_title.png" alt="feud main title">
-      <div id="game-header">
+      <!-- <div id="game-header">
         <h3>ROUND: <span id="round-counter">1</span></h3>
         <h3>SURVEY QUESTION</h3>
-      </div>
+      </div> -->
       <div id="timer-header">
         <h3 id="timer">TIME: 30 SEC</h3>
       </div>
