--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
       <img id="splash-page-img-feud" src="images/feud_title.png" alt="feud main title">
       <img id="splash-page-img-fevsbe" src="images/feud_subtitle.png" alt="front end vs back end subtitle">
       <div id="vs-inputs">
-        <input id="player1-input" class="name-inputs" type="text" placeholder="ENTER FE PLAYER NAME">
+        <input id="player1-input" class="name-inputs focus" type="text" placeholder="ENTER FE PLAYER NAME">
         <img src="images/feud_vs.png" alt="vs" id="splash-page-img-vs">
-        <input id="player2-input" class="name-inputs" type="text" placeholder="ENTER BE PLAYER NAME">
+        <input id="player2-input" class="name-inputs focus" type="text" placeholder="ENTER BE PLAYER NAME">
       </div>
       <button id="start-game" type="button">git init</button>
     </div>
@@ -20,10 +20,6 @@
   <div id="game-page">
     <header>
       <img id="header-img-feud" src="images/feud_title.png" alt="feud main title">
-      <!-- <div id="game-header">
-        <h3>ROUND: <span id="round-counter">1</span></h3>
-        <h3>SURVEY QUESTION</h3>
-      </div> -->
       <div id="timer-header">
         <h3 id="timer">TIME: 30 SEC</h3>
       </div>
@@ -49,7 +45,7 @@
           <h2 id="answer3" class="survey-num">3</h2>
           <h2 id="score3" class="survey-score">#</h2>
         </section>
-        <input autocomplete="off" id="guess-input" type="text" placeholder="ENTER GUESS HERE">
+        <input autocomplete="off" id="guess-input" class="focus" type="text" placeholder="ENTER GUESS HERE">
       </main>
       <aside id="aside-player2" class="innactive">
         <h5 id="player2-name" class="h5-be">be player</h5>
@@ -61,7 +57,7 @@
     <footer>
       <p class="help" title="Need to see how to play the game?">git help</p>
       <button id="submit-guess" type="button">git commit</button>
-      <p class="endgame" title="start over from scratch">rm -rf</p>
+      <p class="endgame" title="Start over from scratch">rm -rf</p>
     </footer>
   </div>
 </html>
