Add current round display

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
   <div id="game-page">
     <header>
       <img id="header-img-feud" src="images/feud_title.png" alt="feud main title">
+      <div id="game-header">
+        <h5>ROUND: <span id="round-counter">1</span></h5>
+      </div>
       <div id="timer-header">
         <h3 id="timer">TIME: 30 SEC</h3>
       </div>
