--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,11 @@
   </head>
   <body>
     <div id="splash-page">
-      <img id="splash-page-img-feud" src="images/feud_title.png" alt="feud main title">
-      <img id="splash-page-img-fevsbe" src="images/feud_subtitle.png" alt="front end vs back end subtitle">
+      <img id="splash-page-img-feud" src="./images/feud_title.png" alt="feud main title">
+      <img id="splash-page-img-fevsbe" src="./images/feud_subtitle.png" alt="front end vs back end subtitle">
       <div id="vs-inputs">
         <input id="player1-input" class="name-inputs focus" type="text" placeholder="ENTER FE PLAYER NAME">
-        <img src="images/feud_vs.png" alt="vs" id="splash-page-img-vs">
+        <img src="./images/feud_vs.png" alt="vs" id="splash-page-img-vs">
         <input id="player2-input" class="name-inputs focus" type="text" placeholder="ENTER BE PLAYER NAME">
       </div>
       <button id="start-game" type="button">git init</button>
@@ -19,7 +19,7 @@
   </body>
   <div id="game-page">
     <header>
-      <img id="header-img-feud" src="images/feud_title.png" alt="feud main title">
+      <img id="header-img-feud" src="./images/feud_title.png" alt="feud main title">
       <div id="game-header">
         <h5>ROUND: <span id="round-counter">1</span></h5>
       </div>
